services/ollama/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ollama
  namespace: ollama
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ollama
  timeout:
    http:
      requestTimeout: 10m
      connectionIdleTimeout: 10m
  healthCheck:
    active:
      type: TCP
      tcp: {}
      interval: 10s
      timeout: 2s
      unhealthyThreshold: 3
      healthyThreshold: 1
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 5
            unit: Second
