services/ollama/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Ollama
    gethomepage.dev/description: LLMs locales
    gethomepage.dev/group: Plataforma
    gethomepage.dev/icon: ollama.png
    gethomepage.dev/href: https://ollama.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - ollama.bonchan.org
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
